src/k8s/apps/lz-edge-forward/ingressroute-http-zone-forward.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lz-http-zone-forward
  namespace: edge-routing
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: HostRegexp(`^([a-z0-9-]+\.)*levizitting\.com$`) && !Host(`headscale.levizitting.com`) && !Host(`k8s-oidc-edge.levizitting.com`) && !Host(`uptime.levizitting.com`) && !Host(`levizitting.com`)
      services:
        - name: lz-k3s
          port: 80
