src/k8s/apps/lz-edge-forward/ingressroutetcp-levizitting-zone-passthrough.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: lz-zone-sni-passthrough
  namespace: edge-routing
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNIRegexp(`^([a-z0-9-]+\.)*levizitting\.com$`) && !HostSNI(`headscale.levizitting.com`) && !HostSNI(`k8s-oidc-edge.levizitting.com`) && !HostSNI(`uptime.levizitting.com`) && !HostSNI(`levizitting.com`)
      services:
        - name: lz-k3s
          port: 443
  tls:
    passthrough: true
